# rocket_csrf_token

./: Cargo.toml  README.md
.github/workflows/: pr_check.yml
examples/minimal/: .env  Cargo.toml  README.md
examples/minimal/src/: main.rs
src/: lib.rs
tests/: fairing_configured.rs  fairing_default.rs  guard_configured.rs  guard_default.rs
