[package]
name = "rocket_csrf_token"
version = "0.3.5"
authors = ["Alex Kotov <kotovalexarian@gmail.com>", "Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
description = "CSRF (Cross-Site Request Forgery) protection for Rocket web framework"
readme = true
homepage = "https://github.com/wiseaidev/rocket_csrf_token"
repository = "https://github.com/wiseaidev/rocket_csrf_token.git"
license = "MIT"
keywords = ["csrf", "http", "rocket", "security", "web"]
categories = ["web-programming"]
publish = true

[dependencies]
base64 = "0.21.5"
bcrypt = "0.15.0"
rand = "0.8.5"
rocket = { version = "=0.5.1", features = ["secrets"] }
