[package]
name = "rocket_csrf_token_example_minimal"
version = "0.0.2"
authors = ["Alex Kotov <kotovalexarian@gmail.com>", "Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15.0"
rocket = "=0.5.0"
rocket_csrf_token = { path = "../.." }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = "1.0.189"
serde_derive = "1.0.189"
